syntax = "proto3";

package messageId;

option go_package = "/messageId";

enum MessageId {
  None = 0;

  CSCreateUser = 50001;
  SCCreateUser = 50002;
  CSLogin = 50003;
  SCLogin = 50004;

  // player
  CSAddFriend = 100001;
  SCAddFriend = 100002;
  CSDelFriend = 100004;
  SCDelFriend = 100003;
  CSSendChatMsg = 100005;
  SCSendChatMsg = 100006;
}